# huzz

./: .gitignore  main.py  pyproject.toml  readme.md
.github/workflows/: pypi-publish.yml
examples/: cloudwatch_vibe.py
src/huzz/: __init__.py  cli.py  core.py  models.py
src/huzz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/huzz/adapters/: cloudwatch.py
tests/: test_huzz.py
